feat: Creation of handlebars templates, and realTimeProducts

--- a/src/views/realTimeProducts.handlebars
+++ b/src/views/realTimeProducts.handlebars
@@ -1,5 +1,5 @@
 {{! Formulario agrega producto }}
-<h1 class="text-center" >La tienda de la Nelly</h1>
+<h1 class="text-center" >La tienda </h1>
 <div class="d-flex p-5 justify-content-center"  >
 
   <form class="d-flex flex-column gap-2 m-3" id="addForm">
